; ModuleID = '/home/carl/AnghaBench/linux/net/ncsi/extr_ncsi-cmd.c_ncsi_cmd_handler_rc.c'
source_filename = "/home/carl/AnghaBench/linux/net/ncsi/extr_ncsi-cmd.c_ncsi_cmd_handler_rc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.ncsi_cmd_arg = type { i32 }
%struct.ncsi_cmd_rc_pkt = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.ncsi_cmd_arg*)* @ncsi_cmd_handler_rc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ncsi_cmd_handler_rc(%struct.sk_buff* %0, %struct.ncsi_cmd_arg* %1) #0 {
  %3 = alloca %struct.sk_buff*, align 8
  %4 = alloca %struct.ncsi_cmd_arg*, align 8
  %5 = alloca %struct.ncsi_cmd_rc_pkt*, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %3, align 8
  store %struct.ncsi_cmd_arg* %1, %struct.ncsi_cmd_arg** %4, align 8
  %6 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %7 = call %struct.ncsi_cmd_rc_pkt* @skb_put_zero(%struct.sk_buff* %6, i32 4)
  store %struct.ncsi_cmd_rc_pkt* %7, %struct.ncsi_cmd_rc_pkt** %5, align 8
  %8 = load %struct.ncsi_cmd_rc_pkt*, %struct.ncsi_cmd_rc_pkt** %5, align 8
  %9 = getelementptr inbounds %struct.ncsi_cmd_rc_pkt, %struct.ncsi_cmd_rc_pkt* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load %struct.ncsi_cmd_arg*, %struct.ncsi_cmd_arg** %4, align 8
  %12 = call i32 @ncsi_cmd_build_header(i32* %10, %struct.ncsi_cmd_arg* %11)
  ret i32 0
}

declare dso_local %struct.ncsi_cmd_rc_pkt* @skb_put_zero(%struct.sk_buff*, i32) #1

declare dso_local i32 @ncsi_cmd_build_header(i32*, %struct.ncsi_cmd_arg*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
